[package]
name    = "ohos_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.1", default-features = false, features = [
    "napi8",
    "async",
    # "tokio_rt"
] }
napi-derive-ohos = { version = "1.0.1" }
# tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "multipart"] }
reqwest-middleware = { version = "0.4.1", default-features = false, features = ["json", "rustls-tls", "multipart"] }
# lazy_static = "1.4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.117"
ohos-hilog-binding = "0.1.1"
hilog-binding = "0.0.4"
# http-cache-reqwest = "0.15.1"
# http-cache = "0.20.1"
# moka = { version = "0.12", features = ["future"] }
# async-trait = "0.1"

[build-dependencies]
napi-build-ohos = { version = "1.0.1" }

[profile.release]
lto = true
strip = true
opt-level = "z"  # Optimize for size.